--- a/is-takip-sistemi/is-takip-sistemi-ui/package.json
+++ b/is-takip-sistemi/is-takip-sistemi-ui/package.json
@@ -18,9 +18,9 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -34,6 +34,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "tslib": "^2.4.1",
     "typescript": "~4.8.2"
   }
 }
