--- a/is-takip-sistemi/İsTakipSistemiApi/IsTakipSistemi.Core/IsTakipSistemi.Core.csproj
+++ b/is-takip-sistemi/İsTakipSistemiApi/IsTakipSistemi.Core/IsTakipSistemi.Core.csproj
@@ -6,4 +6,9 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+  </ItemGroup>
+
 </Project>
