--- a/is-takip-sistemi/İsTakipSistemiApi/IsTakipSistemi.Repository.cs/IsTakipSistemi.Repository.csproj
+++ b/is-takip-sistemi/İsTakipSistemiApi/IsTakipSistemi.Repository.cs/IsTakipSistemi.Repository.csproj
@@ -6,4 +6,18 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstract\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IsTakipSistemi.Core\IsTakipSistemi.Core.csproj" />
+    <ProjectReference Include="..\IsTakipSistemi.Entities\IsTakipSistemi.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
